--- a/views/users/profile.hbs
+++ b/views/users/profile.hbs
@@ -1,1 +1,7 @@
-HELLO! name: {{user.name}}, email: {{user.email}}
+
+
+<div class="container">
+  <div class="regframe">
+    HELLO! name: {{user.name}}, email: {{user.email}}
+  </div>
+</div>
