--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,7 @@
 body {
   width: 100vw;
-  height: 100vh;
+  height: auto;
+  min-height: 100vh;
   padding: 0;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
   display: flex;
@@ -8,6 +9,7 @@ body {
   align-items: center;
   justify-content: space-between;
   background: #07252d;
+  color: #000;
 }
 
 h2 {
@@ -26,7 +28,7 @@ h4 {
   position: relative;
   font-family: 'Marck Script', cursive;
   font-weight: 100;
-  margin: 0 0 100px;
+  margin: 0 0 20px;
   font-size: 2em;
   color: #0e3742;
   width: 100%;
@@ -78,7 +80,7 @@ a:hover {
 
 header {
   width: 100vw;
-  height: 8em;
+  min-height: 25vh;
   display: flex;
 }
 
@@ -90,15 +92,19 @@ header .left {
   width: 100%;
   display: flex;
   justify-content: center;
-  align-content:center;
+  align-content: center;
 }
 
 .logo img {
-  width: 300px;
+  max-width: 340px;
 }
 
 header .center {
   width: 40%;
+  display: flex;
+  flex-direction: column;
+  justify-items: center;
+  justify-content: center;
 }
 
 header .right {
@@ -111,7 +117,8 @@ header .right {
 
 main {
   width: 100%;
-  height: 100%;
+  min-height: 95%;
+  height: auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -120,18 +127,29 @@ main {
 .container {
   display: flex;
   width: 100%;
-  height: 100%;
+  height: auto;
   justify-content: center;
-  align-items:center;
+  align-items: center;
 }
 
 .mainframe {
-  width: 80%;
-  height: 80%;
+  width: 70%;
+  height: auto;
+  min-height: 50%;
   background-color: aliceblue;
   border: 3px solid #3090aa;
   border-radius: 10px;
   padding: 30px;
+  font-size: large;
+}
+
+.regframe {
+  min-width: 30%;
+  min-height: 40%;
+  background-color: aliceblue;
+  border: 3px solid #3090aa;
+  border-radius: 10px;
+  padding: 10px;
   font-size: large;
 }
 
@@ -143,7 +161,13 @@ main {
 #mainform {
   display: flex;
   flex-direction: column;
-  align-items:center;
+  align-items: center;
+}
+
+#mainform button{
+  min-width: 10em;
+  min-height: 2em;
+  margin-bottom: 1em;
 }
 
 .formdiv {
@@ -152,16 +176,43 @@ main {
   margin-bottom: 30px;
 }
 
+.regformdiv {
+  display: flex;
+  min-width: 80%;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-bottom: 1em;
+}
+
+.regformdiv div {
+  width: 100%;
+}
+
+.regformdiv div p {
+  margin: 1em 0 0 0;
+}
+
+.regformdiv input {
+  margin-bottom: 10px;
+  padding: 10px;
+  min-width: 90%;
+}
+
+#emailHelp {
+  font-size: 0.5em;
+  margin: 0;
+}
+
 .formdiv div {
   display: flex;
   flex-direction: column;
-  align-items:center;
+  align-items: center;
 }
 
 #submit {
   width: 70%;
   height: 2em;
-  font-size:1.5em;
+  font-size: 1.5em;
   padding: 0;
   border-radius: 10px;
   cursor: pointer;
@@ -181,26 +232,54 @@ main {
   font-size: large;
 }
 
-#count {
+#count,
+#countSkills {
   width: 5em;
   text-align: center;
 }
 
 .display {
   width: 100%;
-  height: 60vh;
+  min-height: 10vh;
   display: flex;
   justify-content: center;
-  align-items:flex-start;
+  align-items: flex-start;
   padding-top: 1em;
 }
 
 #results {
   width: 98%;
-  height: 47vh;
   border: 2px solid #07252d;
   border-radius: 10px;
   padding: 10px;
+
+}
+
+.skill-line {
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 1px solid black;
+  padding: 15px;
+}
+
+.skill-name {
+  width: 10em;
+  vertical-align: middle;
+}
+
+.skill-count{
+  vertical-align: middle;
+}
+
+.skill-controls {
+  display: flex;
+  justify-content: space-between;
+  min-width: 40vw;
+}
+
+.skill-controls button {
+  cursor: pointer;
+  padding: 5px;
 }
 
 footer {
