--- a/views/index.hbs
+++ b/views/index.hbs
@@ -6,15 +6,38 @@
           <p>Какую профессию ищем?</p>
           <input type="text" name="job-title" id="jobtitle">
         </div>
-        <div>
-          <p>Какое количество вакансий анализировать:</p>
+        <div class="m-right">
+          <p>Количество вакансий:</p>
           <input type="number" id="count" name="count" min="1" max="10" value="3">
+        </div>
+        <div>
+          <p>Выводить навыков:</p>
+          <input type="number" id="countSkills" name="count" min="1" max="10" value="3">
         </div>
       </div>
       <input type="submit" id="submit" value="Начать анализ">
     </form>
     <div class="display">
-      <textarea id="results" readonly name="text"></textarea>
+      {{!-- <textarea id="results" readonly name="text"></textarea> --}}
+      <div id="results">
+        {{#each allskills}}
+        <div class="skill-line">
+          <div class="skill-name">
+            <p>{{name}}</p>
+          </div>
+          <div class="skill-count">
+            <p>{{count}}</p>
+          </div>
+          <div class="skill-controls">
+            <button class="add-to-plan">В планы</button>
+            <button class="add-to-own-skills">В свои навыки</button>
+            <button class="add-to-whitelist">В белый лист</button>
+            <button class="delete">Удалить</button>
+            <button class="add-to-blacklist">В BlackList</button>
+          </div>
+        </div>
+        {{/each}}
+      </div>
     </div>
   </div>
 </div>
