--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -15,7 +15,7 @@
   <header>
     <div class="left">
       <div class="logo">
-        {{!-- <img src="/img/ezhik.png" alt=""> --}}
+        {{!-- <img src="/img/logo.png" alt=""> --}}
       </div>
     </div>
     <div class="center">
