--- a/views/users/register.hbs
+++ b/views/users/register.hbs
@@ -1,17 +1,30 @@
-<form action="/users" method="post">
-  <div class="form-group">
-    <label for="inputName">Name</label>
-    <input type="text" class="form-control" id="inputName" name="name" aria-describedby="emailHelp" placeholder="Enter your name">
-  </div>
-  <div class="form-group">
-    <label for="inputEmail">Email address</label>
-    <input type="email" class="form-control" id="inputEmail" name="email" aria-describedby="emailHelp" placeholder="Enter email">
-    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-  </div>
-  <div class="form-group">
-    <label for="inputPassword1">Password</label>
-    <input type="password" class="form-control" id="inputPassword1" name="password" placeholder="Password">
-  </div>
+<div class="container">
+  <div class="regframe">
+    <form action="/users" method="post" id="mainform">
+      <div class="regformdiv">
+        <div>
+          <p>Name</p>
+        </div>
+        <div>
+          <input type="text" class="form-control" id="inputName" name="name" aria-describedby="emailHelp"
+            placeholder="Enter your name">
+        </div>
+        <div>
+          <p>Email address</p>
+        </div>
+        <div>
+          <input type="email" class="form-control" id="inputEmail" name="email" aria-describedby="emailHelp"
+            placeholder="Enter email">
 
-  <button type="submit" class="btn btn-primary">Submit</button>
-</form>
+          <p id="emailHelp">We'll never share your email with anyone else.</p>
+        </div>
+        <div>
+          <p>Password</p>
+          <input type="password" class="form-control" id="inputPassword1" name="password" placeholder="Enter password">
+        </div>
+      </div>
+
+      <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
+  </div>
+</div>
