--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -15,7 +15,9 @@
   <header>
     <div class="left">
       <div class="logo">
+        <a href="/">
         {{!-- <img src="/img/logo.png" alt=""> --}}
+        </a>
       </div>
     </div>
     <div class="center">
