--- a/views/index.hbs
+++ b/views/index.hbs
@@ -12,7 +12,8 @@
         </div>
         <div>
           <p>Выводить навыков:</p>
-          <input type="number" id="countSkills" name="count" min="1" max="10" value="3">
+          <input type="number" id="countSkills" name="count" min="1" max="10" value="10">
+          <input type="button" id="setcount" value="Обновить">
         </div>
       </div>
       <input type="submit" id="submit" value="Начать анализ">
