--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -8,6 +8,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&family=Marck+Script&display=swap"
     rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Metal+Mania&display=swap" rel="stylesheet">
   <link rel='stylesheet' href='/stylesheets/style.css' />
 </head>
 
@@ -16,13 +17,12 @@
     <div class="left">
       <div class="logo">
         <a href="/">
-        {{!-- <img src="/img/logo.png" alt=""> --}}
+          <img src="/img/logo.png" alt="">
         </a>
       </div>
     </div>
     <div class="center">
-      {{!-- <h2>HeadHunter scrapper</h2>
-      <h4>by Dmitriy Rudakov</h4> --}}
+      <h2>Skills Scrapper</h2>
     </div>
     <div class="right">
       {{#if userName}}
@@ -37,7 +37,10 @@
   <main>
     {{{body}}}
   </main>
-  <footer></footer>
+
+  <footer>
+    {{!-- <h4>by Dmitriy Rudakov</h4> --}}
+  </footer>
 </body>
 
 </html>
